--- a/package.json
+++ b/package.json
@@ -33,18 +33,22 @@
   "dependencies": {
     "@testing-library/user-event": "13.5.0",
     "axios": "0.24.0",
+    "codemirror": "^5.65.15",
     "cors": "2.8.5",
     "css-loader": "^6.5.1",
     "express": "4.17.1",
     "jest-dom": "4.0.0",
+    "lottie-react": "^2.4.0",
     "moment": "2.29.1",
     "mutationobserver-shim": "0.3.7",
     "nanoid": "3.1.30",
     "react": "17.0.2",
+    "react-codemirror2": "^7.3.0",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "5.2.0",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.2",
     "sass": "^1.32.8",
     "style-loader": "^3.3.1",
     "styled-components": "5.3.3",
